--- a/1학년.html
+++ b/1학년.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>First Webpage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="a"><h1>1학년</h1></div>
+    <h2><a href="1-1.html">1학기</a></h2>
+    <h2><a href="1-2.html">2학기</a></h2>
 </body>
