--- a/2학년.html
+++ b/2학년.html
@@ -8,3 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500&display=swap" rel="stylesheet">
 </head>
+<body>
+    <div class="a"><h1>2학년</h1></div>
+    <h2><a href="2-1.html">1학기</a></h2>
+    <h2><a href="2-2.html">2학기</a></h2>
+</body>
